Upgrade multithreading efficiency and scalability, by replacing "Executors.newFixedThreadPool(<userDefinedThreadCount or resource-based-calculated-count>)" with "Executors.newVirtualThreadPerTaskExecutor()". Virtual Threads are much more efficient for a high Network and I/O bound app like this crawler and scale automatically, depending on system-resources and demand.